tests/snapshots/prune__16_query_after_quiet_delete.snap
---
source: tests/prune.rs
info:
  program: frecency
  args:
    - "--db-path"
    - /tmp/frecency-zxatOi/test_prune_quiet.db
    - query
    - "--now"
    - "0001-02-10T00:00:00Z"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
