tests/snapshots/prune__18_query_after_quiet_dry_run.snap
---
source: tests/prune.rs
info:
  program: frecency
  args:
    - "--db-path"
    - /tmp/frecency-zxatOi/test_prune_quiet.db
    - query
    - "--now"
    - "0001-02-10T00:00:00Z"
---
success: true
exit_code: 0
----- stdout -----
0.14893617021276595	/quiet-dry-run

----- stderr -----
